--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -41,6 +41,8 @@ jobs:
     permissions:
       contents: read
       packages: write
+    outputs:
+      container: ${{ steps.meta.outputs.tags }}
       
     steps:
       - uses: actions/checkout@v3
@@ -71,3 +73,33 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+  staging:
+    name: Deploy to Staging
+    needs: [ package-and-publish ]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
+    environment:
+      name: staging
+      url: "https://${{ steps.deploy.outputs.fqdn }}"
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Log into Azure using OIDC
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZ_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZ_TENANT_ID }}
+          subscription-id: ${{ secrets.AZ_SUBSCRIPTION_ID }}
+
+      - name: Deploy resources
+        uses: azure/arm-deploy@v1
+        id: deploy
+        with:
+          scope: subscription
+          region: eastus
+          template: ./infra/container-app/main.bicep
+          parameters: "containerImage=${{ needs.package-and-publish.outputs.container }} env=staging"
