--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -94,7 +94,8 @@ jobs:
           client-id: ${{ secrets.AZ_CLIENT_ID }}
           tenant-id: ${{ secrets.AZ_TENANT_ID }}
           subscription-id: ${{ secrets.AZ_SUBSCRIPTION_ID }}
-
+          allow-no-subscriptions: true 
+          
       - name: Deploy resources
         uses: azure/arm-deploy@v1
         id: deploy
